feat: drop database support in the backend